 * Moving/resizing a group that is anchored to a frame other than UIParent will adjust the offsets instead of resetting the anchor to UIParent.
 * Reactive icons and conditions should now more accurately reflect the state of the abilities that they are checking.
 * New icon events:
 ** On Alpha Increase
 ** On Alpha Decrease
 
===v4.4.6===
 * Bug Fixes:
 ** (r151) conditions.lua line 319: attempt to perform arithmetic on local 'start' (a nil value)
 
===v4.4.4===
 * Bug Fixes:
 ** (r145) Totem icons now work for mushrooms/DK ghouls
 ** (r146) Unit cooldown icons now properly sort
 ** (r146) Fixed an extremely frustrating and elusive bug that was making it impossible to stop moving a group after you started dragging either a spell cooldown or reactive icon that was either checking an ability that was entered by spell name (IDs were fine) that the current character did not have in his/her spellbook, or checking nothing at all.
 ** (r149) TellMeWhen\TellMeWhen-r147.lua:1136: attempt to index local "icon" (a nil value)

===v4.4.3===
 * You can now specify a custom texture to be used for an icon.
 * Added whisper as a text output destination.
 * Shuffled around some framelevels in hopes of fixing the timer bug.
 * Attempted to force cooldowns to reset upon entering an arena. (UNTESTED)
 * Added a dialog to warn users of the dangers of configuration mode.
 * New Conditions:
 ** Pet attack mode
 ** Spell cooldown duration comparison
 ** Item Cooldown duration comparison
 ** Buff duration comparison
 ** Debuff duration comparison
 * Bug Fixes:
 ** (r133) attempt to compare number with nil (In spell cooldown conditions)
 ** (r133) conditions.lua:1009: Usage: GetTalentTabInfo(tabIndex[, isInspect[, isPet[, groupIndex]]])
 ** (r136) TellMeWhen-4.4.3.lua:1630: attempt to index field "Font" (a nil value)
 ** (r137) TellMeWhen_Options.lua:4038: attempt to index global "groups" (a nil value)
 ** (r140) Icon's OnHide events should now properly fire when Always Hide is checked.